--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 mysqlclient==1.4.2.post1
+passlib==1.7.1
 pkg-resources==0.0.0
 SQLAlchemy==1.3.5
 Werkzeug==0.15.4
